apt (0.9.8~exp1) UNRELEASED; urgency=low

  [ David Kalnischkies ]
  * apt-pkg/contrib/strutl.cc:
    - support \n and \r\n line endings in ReadMessages

  [ Michael Vogt ]
  * lp:~mvo/apt/webserver-simulate-broken-with-fix346386:
    - fix invalid InRelease file download checking and add regression
      test to server broken files to the buildin test webserver
  * stop exporting the accidently exported parsenetrc() symbol
  * lp:~mvo/apt/add-glob-function:
    -  add Glob() to fileutl.{cc,h}
  * lp:~mvo/apt/config-clear:
    - support Configuration.Clear() for a clear of the entire 
      configuration
  * apt-pkg/deb/dpkgpm.cc:
    - use tcgetattr() on STDOUT instead of STDIN so that term.log
      works for redirected stdin
    - print error in log if tcgetattr() fails instead of writing
      a empty file
  * use sha512 when available (LP: #1098752)
  * [ABI-Break] lp:~mvo/apt/source-hashes:
    - use sha{512,256,1} for deb-src when available LP: #1098738
 
  [ Marc Deslauriers ]
  * make apt-ftparchive generate missing deb-src hashes (LP: #1078697)

 -- Michael Vogt <mvo@debian.org>  Fri, 01 Mar 2013 12:12:39 +0100

apt (0.9.7.9~exp3) UNRELEASED; urgency=low

  [ Michael Vogt ]
  * apt-pkg/sourcelist.cc:
    - fix segfault when a hostname contains a [, thanks to 
      Tzafrir Cohen (closes: #704653)
  * debian/control:
    - replace manpages-it (closes: #704723)

  [ David Kalnischkies ]
  * various simple changes to fix cppcheck warnings
  * apt-pkg/pkgcachegen.cc:
    - do not store the MD5Sum for every description language variant as
      it will be the same for all so it can be shared to save cache space
    - handle language tags for descriptions are unique strings to be shared
    - factor version string creation out of NewDepends, so we can easily reuse
      version strings e.g. for implicit multi-arch dependencies
    - equal comparisions are used mostly in same-source relations,
      so use this to try to reuse some version strings