@@ -3,6 +3,9 @@ apt (0.9.8~exp1) UNRELEASED; urgency=low
   [ David Kalnischkies ]
   * apt-pkg/contrib/strutl.cc:
     - support \n and \r\n line endings in ReadMessages
+  
+  [ Daniel Hartwig ]
+  * Clarify units of Acquire::http::Dl-Limit (closes: #705445)
 
   [ Michael Vogt ]
   * lp:~mvo/apt/webserver-simulate-broken-with-fix346386:
